argocd/k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qatoolapi
spec:
  replicas: 1
  selector:
    matchLabels:
      platform: qatoolapi
  template:
    metadata:
      labels:
        platform: qatoolapi
    spec:
      containers:
        - env:
            - name: SESSION_SECRET
              value: changeme
            - name: NODE_ENV
              value: production
            - name: RUNTIME_ENV
              value: production
            - name: DATABASE_URL
              value: postgres://postgres:password@postgres-server:5432/postgres
          image: arturix/qatoolapi:latest
#          image: localhost:5000/qatoolapi
          name: qatoolapi
          imagePullPolicy: Always
          ports:
            - containerPort: 8911
#          command:
#            - "yarn rw prisma migrate dev"
      imagePullSecrets:
        - name: my-container-registry-secret
---
apiVersion: v1
kind: Service
metadata:
  labels:
    platform: qatoolapi
  name: qatoolapi
spec:
  ports:
    - port: 8911
      name: qatoolapi
  selector:
    platform: qatoolapi
  type: NodePort



---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qatoolweb
spec:
  replicas: 1
  selector:
    matchLabels:
      platform: qatoolweb
  template:
    metadata:
      labels:
        platform: qatoolweb
    spec:
      containers:
        - env:
            - name: NODE_ENV
              value: production
            - name: RUNTIME_ENV
              value: production
          image: arturix/qatoolweb:latest
#          image: localhost:5000/qatoolweb
          name: qatoolweb
          imagePullPolicy: Always
          ports:
            - containerPort: 8910
      imagePullSecrets:
        - name: my-container-registry-secret
---
apiVersion: v1
kind: Service
metadata:
  labels:
    platform: qatoolweb
  name: qatoolweb
spec:
  ports:
    - port: 8910
      name: qatoolweb
  selector:
    platform: qatoolweb
  type: NodePort


---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qatool
  annotations:
#    kubernetes.io/ingress.class: nginx
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: qatool.sys
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qatoolweb
                port:
                  name: qatoolweb
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: qatoolapi
                port:
                  name: qatoolapi
